# SpiderClaw

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  PR测试文件.md  README.md  Test.py  debug_lark_base.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  syntax_error_test.py  test_approval_subprocess.py  test_lark_fix.py  test_local_fix.py  test_orchestrator_bugs.py  test_webhook_service.py  向 pending_events 表插入模拟测试数据.py  系统检测错误的原理.md  草稿纸.py
CI配置/: ci.yml
config/: agent-config.example.yaml
docs/: 01-github-webhook-setup.md  02-自动修复功能快速开始.md  03-autofix-agent-sparkling-fog.md  05-web服务监控模拟测试.md  08-飞书WebSocket长连接与审批时序优化.md  09-服务采集器部署说明.md  10-docker容器相关.md  11-Docker部署使用说明.md  12-Docker环境GitHub网络问题解决方案.md  FEISHU_SETUP.md  code_review_2026-05-07.md  业务服务模拟触发方案.md  比赛说明.md  自动修复功能快速开始.md  防止dashboard抖动.md
examples/: auto_fix_demo.py  langchain_tool_demo.py
local_test/: test_fix_flow.py  test_runtime_error_1.py  test_runtime_error_2.py  test_syntax_error_1.py  test_syntax_error_2.py  test_syntax_error_3.py
scripts/: agent-mapping.conf  collector.sh
src/: entry.py
test-sidecar/: agent-mapping.conf  collector.sh
tests/: conftest.py  debug_orchestrator_init.py  debug_simple.py  manual_agent_workflow.py  manual_orchestrator_bugs.py  test_agent_workflow.py  test_approval_ws.py  test_biz_error_trigger.sh  test_code_context.py  test_demo.py  test_fix_agent_json.py  test_integration_verify.py  test_langchain_tools.py  test_path_mapping.py  test_rate_limiter.py  test_repair_store.py  test_webhook_log.py  (+4 more)
(+139 files in other folders)
