[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiderclaw"
version = "0.1.0"
description = "事件驱动的自动诊断与修复系统（AutoFix Agent）"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.2",
  "gitpython>=3.1.37",
  "langchain>=0.1.0",
  "langgraph>=0.1.0",
  "openai>=1.3.0",
  "pydantic>=2.5.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "typer>=0.9.0",
  "questionary>=2.0.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.1",
  "python-multipart>=0.0.6",
  "aiofiles>=23.2.1",
  "lark-oapi>=1.2.0",
]

[project.scripts]
spiderclaw = "src.entry:main"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

